--- a/test_code_drawing.ipynb
+++ b/test_code_drawing.ipynb
@@ -1,113 +1,32 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "e4804a6c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tri is CCW: False\n",
-      "Tri is covered: False\n"
-     ]
-    },
-    {
-     "data": {
-      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"500\" height=\"500.0\" viewBox=\"-1.1 -1.1 2.2 2.2\">\n<defs>\n</defs>\n<circle cx=\"0\" cy=\"0\" r=\"1\" fill=\"orange\" stroke-width=\"0.01\" stroke=\"black\" />\n<circle cx=\"0.6707651527218658\" cy=\"-0.19164718649196166\" r=\"0.1433651196517688\" fill=\"red\" fill-opacity=\"1\" />\n<circle cx=\"-0.2887537083953793\" cy=\"0.6737586529225514\" r=\"0.12868525796595487\" fill=\"red\" fill-opacity=\"1\" />\n<path d=\"M-0.48056590571667,-0.47778214084463233 A6.630673612671323,6.630673612671323,0,0,0,-0.4161162152300131,0.6921621164705338 A0.2779678321361654,0.2779678321361654,0,0,1,-0.19231676776183487,0.7589631838995283 A1.0830893110503634,1.0830893110503634,0,0,0,-0.12136257414254936,-0.5859084216758081 A0.585960064259164,0.585960064259164,0,0,1,-0.48056590571667096,-0.4777821408446289 Z\" fill=\"red\" fill-opacity=\"1\" />\n<circle cx=\"-0.28269789326458766\" cy=\"-0.4711631554409797\" r=\"0.1979786890539271\" fill=\"red\" fill-opacity=\"1\" />\n<path d=\"M0.717067473344601,-0.3273293615840345 A43.74733884491081,43.74733884491081,0,0,1,-0.2145411499057559,-0.6570400492557553 A0.6106690329984922,0.6106690329984922,0,0,1,-0.4469496897128386,-0.36063302976008704 A0.9116122069704619,0.9116122069704619,0,0,0,0.7382074595901635,-0.06513595071802603 A0.33047178182853515,0.33047178182853515,0,0,1,0.7170674733454598,-0.3273293615837414 Z\" fill=\"red\" fill-opacity=\"1\" />\n<path d=\"M-0.29729263128772354,0.7016055774139129 A2.292934067001646,2.292934067001646,0,0,1,0.7014677857577595,-0.19679833390226054 A0.3262760564823772,0.3262760564823772,0,0,1,0.6985646073138075,-0.2032224566961148 A2.1453694156042245,2.1453694156042245,0,0,0,-0.30272926882724027,0.698422972406405 A0.27790248444101634,0.27790248444101634,0,0,1,-0.29729263128772276,0.7016055774139119 Z\" fill=\"black\" />\n<path d=\"M-0.3047597129118911,-0.49866177626976155 A2.258263270919917,2.258263270919917,0,0,1,-0.30303135998030717,0.6991524316162492 A0.2779678321361654,0.2779678321361654,0,0,1,-0.29697407814222054,0.7008831371084571 A2.1149880232613136,2.1149880232613136,0,0,0,-0.2952409879363098,-0.501381510534525 A0.585960064259164,0.585960064259164,0,0,1,-0.3047597129118912,-0.49866177626976227 Z\" fill=\"black\" />\n<path d=\"M0.6997992794614322,-0.20351503891906342 A1.5415968188290954,1.5415968188290954,0,0,1,-0.2970439144321314,-0.5039601057129908 A0.6106690329984922,0.6106690329984922,0,0,1,-0.3029979208725279,-0.4960510323524498 A1.4734576026078614,1.4734576026078614,0,0,0,0.7002387587577867,-0.19647907395024422 A0.33047178182853515,0.33047178182853515,0,0,1,0.6997992794614325,-0.2035150389190636 Z\" fill=\"black\" />\n<circle cx=\"-0.07403683080225287\" cy=\"-0.042512188220157454\" r=\"0.03\" fill=\"yellow\" />\n<text x=\"-0.07403683080225287\" y=\"-0.042512188220157454\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">0</text>\n<circle cx=\"0.7\" cy=\"-0.2\" r=\"0.025\" fill=\"#eee\" />\n<text x=\"0.7\" y=\"-0.2\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">0</text>\n<circle cx=\"0.06192142077361251\" cy=\"-0.15032493570306982\" r=\"0.03\" fill=\"yellow\" />\n<text x=\"0.06192142077361251\" y=\"-0.15032493570306982\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">1</text>\n<circle cx=\"-0.3\" cy=\"0.7\" r=\"0.025\" fill=\"#eee\" />\n<text x=\"-0.3\" y=\"0.7\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">1</text>\n<circle cx=\"0.07870280861979895\" cy=\"0.012368254227041013\" r=\"0.03\" fill=\"yellow\" />\n<text x=\"0.07870280861979895\" y=\"0.012368254227041013\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">2</text>\n<circle cx=\"-0.3\" cy=\"-0.5\" r=\"0.025\" fill=\"#eee\" />\n<text x=\"-0.3\" y=\"-0.5\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">2</text>\n</svg>",
-      "text/plain": [
-       "<drawSvg.drawing.Drawing at 0x244406f3a00>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import drawSvg as draw\n",
-    "from constructions import deltaLines_of_Line, shift, isPointOnSegment\n",
-    "from deltaNeigbourhood import *\n",
-    "from hyperbolic.poincare.shapes import *\n",
-    "from Triangle import Triangle\n",
-    "\n",
-    "delta=0.6\n",
-    "\n",
-    "d = draw.Drawing(2.2, 2.2, origin='center')\n",
-    "d.setRenderSize(500)\n",
-    "d.append(draw.Circle(0, 0, 1, fill='orange',stroke_width=0.01, stroke='black'))\n",
-    "\n",
-    "p1=Point.fromEuclid(0.7,0.2)\n",
-    "p2=Point.fromEuclid(-0.3,-0.7)\n",
-    "p3=Point.fromEuclid(-0.3,0.5)\n",
-    "Points=[p1,p2,p3]\n",
-    "#Points=[Point.fromPolarEuclid(0.75,deg=i/3*360) for i in range(3)]\n",
-    "IdealPoints=[Ideal(Points[i].theta) for i in range(3)]\n",
-    "'''\n",
-    "C1= Circle.fromCenterRadius(p1,delta)\n",
-    "print(p1, C1.projShape.cx,C1.projShape.cy)\n",
-    "d.draw(C1, fill='blue')\n",
-    "'''\n",
-    "\n",
-    "Tri=Triangle.fromVertices(Points)\n",
-    "#OffTri=Tri.offsetTriangle(delta)       #for ideal this doesn't work\n",
-    "\n",
-    "deltaNeigbourhood(Tri, d, delta, 0)\n",
-    "\n",
-    "for e in Tri.edges:\n",
-    "    d.draw(e, hwidth=0.03, fill='black')\n",
-    "\n",
-    "for i,v in enumerate(Tri.vertices):\n",
-    "    #d.draw(makeMidCap(Tri, i, delta), fill='red')\n",
-    "    p = innerInterPoint(Tri,i,delta)\n",
-    "    d.draw(p, radius=0.03,fill='yellow')\n",
-    "    d.draw(draw.Text(str(i),0.05,*p, center=0.7))\n",
-    "    d.draw(v, radius=0.025, fill='#eee')\n",
-    "    d.draw(draw.Text(str(i), 0.05, *v, center=0.7))\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "print('Tri is CCW:',Tri.isCCW())\n",
-    "print('Tri is covered:',Tri.isCovered(delta))\n",
-    "d"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "b9fc48f8",
    "metadata": {},
    "source": [
-    "Ideal(-0.754, 0.657) True\n",
-    "Ideal(-0.905, -0.426) True\n",
-    "Ideal(-0.336, -0.942) True\n",
+    "v7 makes problems:\n",
+    "[Ideal(0.997, -0.071), Ideal(0.799, 0.602), Point(0.039, -0.737)]\n",
+    "[Ideal(0.995, 0.097), Ideal(-0.584, -0.812), Point(-0.437, -0.069)]\n",
+    "k=2\n",
     "\n",
-    "Ideal(0.945, -0.327) True\n",
-    "Ideal(1.0, -0.011) True\n",
-    "Ideal(0.448, 0.894) True\n",
-    "\n",
-    "Point(0.419, -0.711) False\n",
-    "Ideal(0.944, -0.33) True\n",
-    "Ideal(0.927, -0.376) True\n",
-    "\n",
-    "Point(0.157, -0.283)\n",
-    "Ideal(0.584, -0.812)\n",
-    "Ideal(0.999, 0.034)\n",
-    "\n",
-    "Point(0.821, -0.357)\n",
-    "Ideal(0.87, -0.492)\n",
-    "Ideal(0.828, -0.56)\n",
-    "\n",
-    "Point(-0.141, 0.899)\n",
-    "Point(-0.293, 0.137)\n",
-    "Point(-0.719, 0.363)"
+    "in approx the isCovered fails, multiple intersections with the edge that are not ideal:\n",
+    "[Ideal(0.782, 0.623), Ideal(0.785, -0.62), Ideal(-0.781, -0.624)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d08fc52e",
+   "metadata": {},
+   "source": [
+    "Nice looking triangles:\n",
+    "PList = [Point(0.8, 0.516), Point(-0.215, -0.557), Point(-0.611, 0.639)]\n",
+    "k = 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 18,
    "id": "a719b7da",
    "metadata": {},
    "outputs": [
@@ -115,114 +34,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Point(0.74, -0.118)\n",
-      "Point(0.111, 0.045)\n",
-      "Point(0.699, 0.546)\n",
+      "PList = [Point(-0.084, 0.134), Point(0.797, 0.335), Point(-0.45, -0.86)]\n",
+      "k = 0\n",
       "Tri is CW\n",
-      "Tri is covered\n",
-      "delta = 0.7006378173828125\n"
+      "Tri is delta-slim for delta = 0.3\n"
      ]
     },
     {
      "data": {
-      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"500\" height=\"500.0\" viewBox=\"-1.1 -1.1 2.2 2.2\">\n<defs>\n</defs>\n<circle cx=\"0\" cy=\"0\" r=\"1\" fill=\"orange\" stroke-width=\"0.01\" stroke=\"black\" />\n<path d=\"M0.9864224543038295,0.1642277127807905 A2.095911225956698,2.095911225956698,0,0,0,-0.8896878697974284,-0.456569265649051 A2.065209185965242,2.065209185965242,0,0,1,0.9864224543038291,0.1642277127807905 Z\" fill=\"darkorange\" />\n<path d=\"M0.986422454303828,0.16422771278079762 A1.3667628643071343,1.3667628643071343,0,0,1,-0.8896878697974333,-0.456569265649043 A1.377289420543023,1.377289420543023,0,0,0,0.9864224543038282,0.16422771278079762 Z\" fill=\"blue\" />\n<path d=\"M0.10921953353235603,-0.038332366528152306 A5.854644382821928,5.854644382821928,0,0,0,0.7396452632971222,0.1215196487504544 A0.2924070430150057,0.2924070430150057,0,0,1,0.7409760465703337,0.11508660301466053 A7.101928878329246,7.101928878329246,0,0,1,0.1136627220704316,-0.05243136388902325 A5.318953193957191,5.318953193957191,0,0,0,0.10921953353235736,-0.038332366528151196 Z\" />\n<path d=\"M-0.6746436300346257,0.7381435988029039 A1.8704768409804404,1.8704768409804404,0,0,0,0.788128705331439,-0.6155104741859314 A1.8471678344112765,1.8471678344112765,0,0,1,-0.6746436300346261,0.7381435988029044 Z\" fill=\"darkorange\" />\n<path d=\"M-0.6746436300346045,0.7381435988029244 A1.4825820097036557,1.4825820097036557,0,0,1,0.7881287053314546,-0.6155104741859112 A1.4957515729159498,1.4957515729159498,0,0,0,-0.6746436300346043,0.738143598802923 Z\" fill=\"blue\" />\n<path d=\"M0.6984784884461952,-0.5468453323947129 A10.11884151754097,10.11884151754097,0,0,0,0.10647189161852388,-0.05086536949626552 A4.3602492213127055,4.3602492213127055,0,0,0,0.11640932356302924,-0.03992138067345152 A14.529014662920126,14.529014662920126,0,0,1,0.7004694211851277,-0.5443451972364652 A0.12010784874354004,0.12010784874354004,0,0,1,0.6984784884462041,-0.5468453323947198 Z\" />\n<path d=\"M0.7794488209684365,-0.6264659092807158 A0.4548484692475285,0.4548484692475285,0,1,0,0.9687594811536875,0.24800215256089655 A0.4555293525016271,0.4555293525016271,0,1,1,0.7794488209684367,-0.6264659092807157 Z\" fill=\"darkorange\" />\n<path d=\"M0.7794488209684365,-0.6264659092807152 A1.0210541858855429,1.0210541858855429,0,0,0,0.9687594811536875,0.24800215256089653 A1.0046705785817274,1.0046705785817274,0,0,1,0.7794488209684367,-0.6264659092807161 Z\" fill=\"blue\" />\n<path d=\"M0.7426105999822126,0.1159863517570025 A0.5040465010454317,0.5040465010454317,0,0,1,0.7007266764373612,-0.544611033933855 A0.12372093410266392,0.12372093410266392,0,0,1,0.698213471029794,-0.5465854684418944 A0.49653870619683516,0.49653870619683516,0,0,0,0.737980990601254,0.1206472130639665 A0.3598319360030402,0.3598319360030402,0,0,1,0.7426105999822126,0.11598635175700245 Z\" />\n<circle cx=\"0.7402927589552263\" cy=\"0.11829856540530582\" r=\"0.025\" fill=\"lightgray\" />\n<text x=\"0.7402927589552263\" y=\"0.11829856540530582\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">0</text>\n<circle cx=\"0.11143750911298453\" cy=\"-0.04538746835103245\" r=\"0.025\" fill=\"lightgray\" />\n<text x=\"0.11143750911298453\" y=\"-0.04538746835103245\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">1</text>\n<circle cx=\"0.6994657052096496\" cy=\"-0.5455885585637359\" r=\"0.025\" fill=\"lightgray\" />\n<text x=\"0.6994657052096496\" y=\"-0.5455885585637359\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">2</text>\n<path d=\"M0.65294393259605,0.2619790490226517 A0.15747825326337658,0.15747825326337658,0,0,0,0.843835761341009,0.045617206619848874\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n<path d=\"M0.843835761341009,0.04561720661984886 A1.0128004837957436,1.0128004837957436,0,0,1,0.7589356346564808,-0.5203254945599014\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n<path d=\"M0.6738051972161868,-0.6095601534313662 A0.07875992530968212,0.07875992530968212,0,0,1,0.758935634656481,-0.5203254945599014\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n<path d=\"M0.6738051972161876,-0.6095601534313573 A1.4891159134914944,1.4891159134914944,0,0,0,-0.10481452329652385,-0.3028257922572881\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n<path d=\"M0.3401858034151463,0.18828985944675963 A0.33232942323134884,0.33232942323134884,0,1,1,-0.1048145232965249,-0.3028257922572894\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n<path d=\"M0.3401858034151455,0.18828985944675902 A1.8587169099738365,1.8587169099738365,0,0,0,0.42288772213491854,0.09494098454934252\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n<path d=\"M0.4228877221349177,0.09494098454934333 A0.455185562196329,0.455185562196329,0,0,0,0.65294393259605,0.2619790490226517\" stroke-width=\"0.01\" stroke=\"red\" fill=\"none\" />\n</svg>",
+      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"750\" height=\"750.0\" viewBox=\"-1.05 -1.05 2.1 2.1\">\n<defs>\n</defs>\n<circle cx=\"0\" cy=\"0\" r=\"1\" fill=\"#ff7f00\" stroke-width=\"0.01\" stroke=\"#001a30\" />\n<path d=\"M-0.0844416420053456,-0.13408079992560662 A3.4493066427441796,3.4493066427441796,0,0,0,0.7969971712481276,-0.3349491732542549 A2.7968772665587607,2.7968772665587607,0,0,0,-0.4504064405958528,0.8604427844624243 A4.323054417116918,4.323054417116918,0,0,0,-0.08444164200534665,-0.1340807999256065 Z\" stroke=\"black\" stroke-width=\"0.005\" fill=\"#53565b\" fill-opacity=\"1\" />\n<path d=\"M0.05983083288589598,-0.10289706058176407 A0.14522764896448012,0.14522764896448012,0,0,0,-0.2228750972545353,-0.1688434172952702 A14.280119767428138,14.280119767428138,0,0,0,-0.4583075463426489,0.8577186407624735 A0.008633040969441896,0.008633040969441896,0,0,0,-0.443686829797712,0.8654048889835647 A19.715438773263728,19.715438773263728,0,0,1,0.8172154634501094,-0.30389366930094575 A0.03824261652113506,0.03824261652113506,0,0,0,0.7851345110168179,-0.3705766484567561 A1.5789135565275407,1.5789135565275407,0,0,0,0.03620261105983236,0.0011248947499216122 A1.9508472295480974,1.9508472295480974,0,0,0,0.059830832885894525,-0.1028970605817644 Z\" stroke=\"black\" stroke-width=\"0.005\" fill=\"#ff9e1b\" fill-opacity=\"0.5\" />\n</svg>",
       "text/plain": [
-       "<drawSvg.drawing.Drawing at 0x29bf443dac0>"
+       "<drawSvg.drawing.Drawing at 0x1f1c78f9df0>"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import math\n",
+    "import random\n",
     "import drawSvg as draw\n",
     "from constructions import *\n",
     "from deltaNeigbourhood import *\n",
     "from hyperbolic.poincare.shapes import *\n",
     "from Triangle import *\n",
     "\n",
-    "d = draw.Drawing(2.2, 2.2, origin='center')\n",
-    "d.setRenderSize(500)\n",
-    "d.append(draw.Circle(0, 0, 1, fill='orange',stroke_width=0.01, stroke='black'))\n",
+    "d = draw.Drawing(2.1, 2.1, origin='center')\n",
+    "d.setRenderSize(750)\n",
+    "d.append(draw.Circle(0, 0, 1, fill='#ff7f00', stroke_width=0.01, stroke='#001a30'))\n",
     "\n",
-    "\n",
-    "\n",
-    "p1=Point.fromEuclid(-0.104, 0.069)\n",
-    "p2=Point.fromEuclid(-0.182, 0.212)\n",
-    "p3=Point.fromEuclid(-0.622, -0.316)\n",
-    "\n",
-    "PList=[p1,p2, p3]\n",
     "PList=randomPoints(3)\n",
-    "'''\n",
-    "p1=PList[0]\n",
-    "p2=PList[1]\n",
-    "p3=PList[2]\n",
-    "p1=Ideal(PList[0].theta)\n",
-    "p2=Ideal(PList[1].theta)\n",
-    "p3=Ideal(PList[2].theta)\n",
-    "PList=[p1,p2, p3]\n",
-    "'''\n",
     "#PList=[Ideal.fromDegree(i/3*360) for i in range(2)]\n",
-    "#PList=[Ideal(p.theta) for p in PList]\n",
     "\n",
-    "#print(PList)\n",
+    "#PList=[Point(-0.381, -0.06), Point(-0.13, 0.123), Point(-0.182, 0.23)]\n",
+    "\n",
+    "k=random.randint(0,2)\n",
+    "#k=0\n",
+    "print('PList =', PList)\n",
+    "print('k =', k)\n",
     "\n",
     "Tri=Triangle.fromVertices(PList)\n",
     "\n",
-    "#d.draw(Tri, stroke_width=0.003, stroke='blue')\n",
-    "\n",
     "delta = Tri.approx()\n",
-    "#delta=0.3\n",
-    "#print(np.ln(1+2**0.5))\n",
-    "\n",
-    "#d.draw(Tri, stroke='black', stroke_width=0.01, fill='None')\n",
-    "#d.draw(Tri.offsetPolygon(delta), fill='black')\n",
-    "#deltaNeigbourhood(Tri, d, delta, 0)\n",
-    "#d.draw(deltaNbh(Tri,delta,0), stroke='black', stroke_width=0.03, fill='red')\n",
+    "delta=0.3\n",
+    "d.draw(Tri, stroke='black', stroke_width=0.005,  fill='#53565b', fill_opacity=1)\n",
+    "d.draw(deltaNbh(Tri,delta,k), stroke='black',stroke_width=0.005, fill='#ff9e1b', fill_opacity=0.5)\n",
     "\n",
     "\n",
-    "for i,l in enumerate(Tri.edges):\n",
-    "    #d.draw(Tri.midCap(i,delta),stroke_width=0.0015, stroke='black',fill='red')\n",
-    "    d.draw(Tri.offsetEdge(i,delta, inner=True), hwidth=0.01, fill='darkorange')\n",
-    "    d.draw(Tri.offsetEdge(i,delta, inner=False), hwidth=0.01, fill='blue')\n",
-    "    #d.draw(Hypercycle.fromHypercycleOffset(l,delta), hwidth=0.03,fill='yellow')\n",
-    "    d.draw(l, hwidth=0.03)\n",
-    "\n",
-    "for i,v in enumerate(Tri.vertices):\n",
-    "    print(v)\n",
-    "    d.draw(v, radius=0.025, fill='lightgray')\n",
-    "    d.draw(draw.Text(str(i), 0.05, *v, center=0.7))\n",
-    "\n",
-    "for l in deltaNbh(Tri,delta,0).edges:\n",
-    "    d.draw(l, stroke_width=0.01, stroke='red', fill='none') \n",
-    "'''\n",
-    "    d.draw(Tri.offsetVertice(i, i, delta, inner=False), radius=0.01, fill='lightblue')\n",
-    "    d.draw(Tri.offsetVertice(i, i-1, delta, inner=False), radius=0.01, fill='lightblue')\n",
-    "    d.draw(Tri.offsetVertice(i, i, delta, inner=True), radius=0.01, fill='orange')\n",
-    "    d.draw(Tri.offsetVertice(i, i-1, delta, inner=True), radius=0.01, fill='orange')\n",
-    "    d.draw(Tri.offsetVertice(i, i, delta, onEdge=True), radius=0.01, fill='lightgreen')\n",
-    "    d.draw(Tri.offsetVertice(i, i-1, delta, onEdge=True), radius=0.01, fill='lightgreen')\n",
-    "\n",
-    "\n",
-    "if Tri.isIdeal():\n",
-    "    print('Tri is Ideal')\n",
-    "else:\n",
-    "    print('Tri is not Ideal')\n",
-    "'''\n",
     "if Tri.isCCW():\n",
     "    print('Tri is CCW')\n",
     "else:\n",
     "    print('Tri is CW')\n",
     "\n",
-    "if Tri.isCovered(delta):\n",
-    "    print('Tri is covered')\n",
+    "if Tri.isDeltaslim(delta):\n",
+    "    print('Tri is delta-slim for delta =',delta)\n",
     "else:\n",
-    "    print('Tri is not covered')\n",
+    "    print('Tri is not covered for delta =',delta)\n",
     "\n",
-    "print('delta =',delta)\n",
-    "\n",
+    "#print(delta)\n",
+    "#print(np.log(1+2**0.5))\n",
+    "#d.savePng('triangleDeltaNbh.png')\n",
     "d"
    ]
   }
