added upper half plane model

--- a/examples/poincare.ipynb
+++ b/examples/poincare.ipynb
@@ -2,34 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a719b7da",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\drawSvg\\raster.py:18: RuntimeWarning: Failed to import CairoSVG. drawSvg will be unable to output PNG or other raster image formats. See https://github.com/cduck/drawSvg#prerequisites for more details.\n",
+      "Original OSError: no library called \"cairo-2\" was found\n",
+      "no library called \"cairo\" was found\n",
+      "no library called \"libcairo-2\" was found\n",
+      "cannot load library 'libcairo.so.2': error 0x7e\n",
+      "cannot load library 'libcairo.2.dylib': error 0x7e\n",
+      "cannot load library 'libcairo-2.dll': error 0x7e\n",
+      "  warnings.warn(msg, RuntimeWarning)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PList = [Point(-0.084, 0.134), Point(0.797, 0.335), Point(-0.45, -0.86)]\n",
-      "k = 0\n",
-      "Tri is CW\n",
-      "Tri is delta-slim for delta = 0.3\n"
+      "PList = [Point(0.423, 0.438), Point(-0.64, 0.156), Point(-0.157, -0.262)]\n",
+      "k = 2\n",
+      "Tri is CCW\n",
+      "Tri is not covered for delta = 0.3\n"
      ]
     },
     {
      "data": {
-      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"750\" height=\"750.0\" viewBox=\"-1.05 -1.05 2.1 2.1\">\n<defs>\n</defs>\n<circle cx=\"0\" cy=\"0\" r=\"1\" fill=\"#ff7f00\" stroke-width=\"0.01\" stroke=\"#001a30\" />\n<path d=\"M-0.0844416420053456,-0.13408079992560662 A3.4493066427441796,3.4493066427441796,0,0,0,0.7969971712481276,-0.3349491732542549 A2.7968772665587607,2.7968772665587607,0,0,0,-0.4504064405958528,0.8604427844624243 A4.323054417116918,4.323054417116918,0,0,0,-0.08444164200534665,-0.1340807999256065 Z\" stroke=\"black\" stroke-width=\"0.005\" fill=\"#53565b\" fill-opacity=\"1\" />\n<path d=\"M0.05983083288589598,-0.10289706058176407 A0.14522764896448012,0.14522764896448012,0,0,0,-0.2228750972545353,-0.1688434172952702 A14.280119767428138,14.280119767428138,0,0,0,-0.4583075463426489,0.8577186407624735 A0.008633040969441896,0.008633040969441896,0,0,0,-0.443686829797712,0.8654048889835647 A19.715438773263728,19.715438773263728,0,0,1,0.8172154634501094,-0.30389366930094575 A0.03824261652113506,0.03824261652113506,0,0,0,0.7851345110168179,-0.3705766484567561 A1.5789135565275407,1.5789135565275407,0,0,0,0.03620261105983236,0.0011248947499216122 A1.9508472295480974,1.9508472295480974,0,0,0,0.059830832885894525,-0.1028970605817644 Z\" stroke=\"black\" stroke-width=\"0.005\" fill=\"#ff9e1b\" fill-opacity=\"0.5\" />\n</svg>",
+      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"750\" height=\"750.0\" viewBox=\"-1.05 -1.05 2.1 2.1\">\n<defs>\n</defs>\n<circle cx=\"0\" cy=\"0\" r=\"1\" fill=\"#ff7f00\" stroke-width=\"0.01\" stroke=\"#001a30\" />\n<path d=\"M0.4229216733977401,-0.4379912051698176 A1.9864486540121709,1.9864486540121709,0,0,1,-0.6395467363212943,-0.15606688645433198 A1.5939287070260826,1.5939287070260826,0,0,1,-0.15704454584683059,0.262413939066122 A12.737516464611069,12.737516464611069,0,0,1,0.422921673397747,-0.4379912051698067 Z\" stroke=\"black\" stroke-width=\"0.005\" fill=\"#53565b\" fill-opacity=\"1\" />\n<path d=\"M-0.04378318590394284,0.17859153805678707 A0.1352410717202074,0.1352410717202074,0,0,1,-0.2584642293401336,0.3428785335506572 A3.23774210841452,3.23774210841452,0,0,0,-0.6860563301100457,-0.08872520464126099 A0.085179985691403,0.085179985691403,0,0,1,-0.6455005692263394,-0.23809846025287512 A5.255845311903152,5.255845311903152,0,0,0,0.382890217502047,-0.5199380437119565 A0.09446977138816955,0.09446977138816955,0,0,1,0.4791597799504481,-0.36071561263133256 A1.293845887555738,1.293845887555738,0,0,1,-0.2564444804696019,-0.04607325270044771 A1.1217270906020171,1.1217270906020171,0,0,1,-0.04378318590394392,0.17859153805678785 Z\" stroke=\"black\" stroke-width=\"0.005\" fill=\"#ff9e1b\" fill-opacity=\"0.5\" />\n</svg>",
       "text/plain": [
-       "<drawSvg.drawing.Drawing at 0x1f1c78f9df0>"
+       "<drawSvg.drawing.Drawing at 0x1d0962e77c0>"
       ]
      },
+     "execution_count": 1,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import random\n",
     "import drawSvg as draw\n",
+    "import sys\n",
+    "sys.path.insert(0,\"..\")\n",
     "from constructions import *\n",
     "from deltaNeigbourhood import *\n",
     "from hyperbolic.poincare.shapes import *\n",
@@ -71,8 +88,25 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.7 64-bit ('base': conda)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
