added DoubleIntersections() as Exceptions

--- a/examples/halfplane.ipynb
+++ b/examples/halfplane.ipynb
@@ -2,27 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\drawSvg\\raster.py:18: RuntimeWarning: Failed to import CairoSVG. drawSvg will be unable to output PNG or other raster image formats. See https://github.com/cduck/drawSvg#prerequisites for more details.\n",
+      "Original OSError: no library called \"cairo-2\" was found\n",
+      "no library called \"cairo\" was found\n",
+      "no library called \"libcairo-2\" was found\n",
+      "cannot load library 'libcairo.so.2': error 0x7e\n",
+      "cannot load library 'libcairo.2.dylib': error 0x7e\n",
+      "cannot load library 'libcairo-2.dll': error 0x7e\n",
+      "  warnings.warn(msg, RuntimeWarning)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PList = [Ideal(-0.125, 0.992), Ideal(-0.628, -0.778), Ideal(0.545, -0.839)]\n",
-      "k = 0\n",
+      "PList = [Ideal(-0.181, 0.984), Ideal(-0.998, -0.064), Ideal(-0.426, -0.905)]\n",
+      "k = 1\n",
       "Tri is CCW\n",
-      "Tri is delta-slim for delta = 0.8813735870082837\n"
+      "Tri is delta-slim for delta = 0.8813735870090795\n"
      ]
     },
     {
      "data": {
-      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"750\" height=\"416.66666666666663\" viewBox=\"-4.5 -4.9 9 5\">\n<defs>\n</defs>\n<rect x=\"-10\" y=\"-10\" width=\"20\" height=\"10\" fill=\"#ff7f00\" />\n<path d=\"M-15.87712960298034,-1.129164570761276e-14 A7.762009294868848,7.762009294868848,0,0,1,-0.3531110132426427,-1.665334536937736e-16 A0.32466649197143027,0.32466649197143027,0,1,1,0.29622197070021605,-6.93889390390723e-17 A8.086675786840292,8.086675786840292,0,1,0,-15.877129602980368,2.2588507687077318e-13 Z\" stroke=\"black\" stroke-width=\"0.005\" fill=\"#53565b\" fill-opacity=\"1\" />\n<path d=\"M-15.877129602980482,-0.0 A11.436286572172666,11.436286572172666,0,1,1,0.2962219707002163,-0.0 A0.4591477561904363,0.4591477561904363,0,0,0,-0.3531110132426449,3.3306690738754696e-16 A0.4591477561904365,0.4591477561904365,0,0,1,-0.3780937238462007,-0.6222603379264697 A11.436286572172671,11.436286572172671,0,0,0,-15.87712960298044,-2.3092638912203256e-14 Z\" stroke=\"black\" stroke-width=\"0.005\" fill=\"#ff9e1b\" fill-opacity=\"0.5\" />\n</svg>",
+      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"750\" height=\"416.66666666666663\" viewBox=\"-4.5 -4.9 9 5\">\n<defs>\n</defs>\n<rect x=\"-10\" y=\"-10\" width=\"20\" height=\"10\" fill=\"#ff7f00\" />\n<path d=\"M-10.966646919471195,6.14076283029998e-16 A5.01431337964172,5.01431337964172,0,1,1,-0.9380201601877545,-0.0 A0.35707317492553414,0.35707317492553414,0,1,1,-0.22387381033668496,-3.469446951953612e-17 A5.3713865545672554,5.3713865545672554,0,1,0,-10.966646919471195,1.3628976087218443e-15 Z\" stroke=\"black\" stroke-width=\"0.005\" fill=\"#53565b\" fill-opacity=\"1\" />\n<path d=\"M-0.9380201601877527,1.7763568394002505e-15 A7.091309987425579,7.091309987425579,0,0,0,-10.96664691947107,7.72715225139109e-14 A7.59628771416126,7.59628771416126,0,1,1,-0.22387381033668596,-8.881784197001252e-16 A7.596287714161595,7.596287714161595,0,0,0,-0.6054712283464276,-0.3562300012019106 A7.091309987425823,7.091309987425823,0,0,1,-0.9380201601877536,-0.0 Z\" stroke=\"black\" stroke-width=\"0.005\" fill=\"#ff9e1b\" fill-opacity=\"0.5\" />\n</svg>",
       "text/plain": [
-       "<drawSvg.drawing.Drawing at 0x27d30432760>"
+       "<drawSvg.drawing.Drawing at 0x1a55863eb80>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,6 +51,10 @@
     "from constructions import *\n",
     "from deltaNeigbourhood import *\n",
     "from Triangle import *\n",
+    "\n",
+    "backgroundStyle = dict( fill='#ff7f00', stroke_width=0.01, stroke='#001a30')\n",
+    "polyStyle1 = dict(stroke='black', stroke_width=0.005,  fill='#53565b', fill_opacity=1)\n",
+    "polyStyle2 = dict(stroke='black', stroke_width=0.005, fill='#ff9e1b', fill_opacity=0.5)\n",
     "\n",
     "trans= Transform.diskToHalf()\n",
     "\n",
