--- a/examples/poincare.ipynb
+++ b/examples/poincare.ipynb
@@ -2,42 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "a719b7da",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\drawSvg\\raster.py:18: RuntimeWarning: Failed to import CairoSVG. drawSvg will be unable to output PNG or other raster image formats. See https://github.com/cduck/drawSvg#prerequisites for more details.\n",
-      "Original OSError: no library called \"cairo-2\" was found\n",
-      "no library called \"cairo\" was found\n",
-      "no library called \"libcairo-2\" was found\n",
-      "cannot load library 'libcairo.so.2': error 0x7e\n",
-      "cannot load library 'libcairo.2.dylib': error 0x7e\n",
-      "cannot load library 'libcairo-2.dll': error 0x7e\n",
-      "  warnings.warn(msg, RuntimeWarning)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PList = [Point(0.423, 0.438), Point(-0.64, 0.156), Point(-0.157, -0.262)]\n",
-      "k = 2\n",
-      "Tri is CCW\n",
+      "PList = [Ideal(0.934, 0.356), Ideal(0.33, -0.944), Ideal(-0.984, -0.177)]\n",
+      "k = 1\n",
+      "Tri is CW\n",
       "Tri is not covered for delta = 0.3\n"
      ]
     },
     {
      "data": {
-      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"750\" height=\"750.0\" viewBox=\"-1.05 -1.05 2.1 2.1\">\n<defs>\n</defs>\n<circle cx=\"0\" cy=\"0\" r=\"1\" fill=\"#ff7f00\" stroke-width=\"0.01\" stroke=\"#001a30\" />\n<path d=\"M0.4229216733977401,-0.4379912051698176 A1.9864486540121709,1.9864486540121709,0,0,1,-0.6395467363212943,-0.15606688645433198 A1.5939287070260826,1.5939287070260826,0,0,1,-0.15704454584683059,0.262413939066122 A12.737516464611069,12.737516464611069,0,0,1,0.422921673397747,-0.4379912051698067 Z\" stroke=\"black\" stroke-width=\"0.005\" fill=\"#53565b\" fill-opacity=\"1\" />\n<path d=\"M-0.04378318590394284,0.17859153805678707 A0.1352410717202074,0.1352410717202074,0,0,1,-0.2584642293401336,0.3428785335506572 A3.23774210841452,3.23774210841452,0,0,0,-0.6860563301100457,-0.08872520464126099 A0.085179985691403,0.085179985691403,0,0,1,-0.6455005692263394,-0.23809846025287512 A5.255845311903152,5.255845311903152,0,0,0,0.382890217502047,-0.5199380437119565 A0.09446977138816955,0.09446977138816955,0,0,1,0.4791597799504481,-0.36071561263133256 A1.293845887555738,1.293845887555738,0,0,1,-0.2564444804696019,-0.04607325270044771 A1.1217270906020171,1.1217270906020171,0,0,1,-0.04378318590394392,0.17859153805678785 Z\" stroke=\"black\" stroke-width=\"0.005\" fill=\"#ff9e1b\" fill-opacity=\"0.5\" />\n</svg>",
+      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"750\" height=\"750.0\" viewBox=\"-1.05 -1.05 2.1 2.1\">\n<defs>\n</defs>\n<circle cx=\"0\" cy=\"0\" r=\"1\" fill=\"#ff7f00\" stroke-width=\"0.01\" stroke=\"#001a30\" />\n<path d=\"M0.9344879864938564,-0.35599466723345474 A1.027687412185467,1.027687412185467,0,0,0,0.3303464397374629,0.9438597511032999 A1.1726842234456862,1.1726842234456862,0,0,0,-0.9841918662044878,0.1771055349133024 A10.725524953995173,10.725524953995173,0,0,0,0.9344879864938567,-0.3559946672334551 Z\" stroke=\"black\" stroke-width=\"0.005\" fill=\"#53565b\" fill-opacity=\"1\" />\n<path d=\"M0.3303464397374627,0.9438597511033004 A1.563618146174869,1.563618146174869,0,0,1,0.9344879864938562,-0.35599466723345463 A4.947533818373425,4.947533818373425,0,0,0,-0.984191866204488,0.17710553491330572 A2.6280910382530305,2.6280910382530305,0,0,0,0.31235653978572286,0.0023303537033183552 A0.8182184120577007,0.8182184120577007,0,0,0,0.3303464397374628,0.9438597511032996 Z\" stroke=\"black\" stroke-width=\"0.005\" fill=\"#ff9e1b\" fill-opacity=\"0.5\" />\n</svg>",
       "text/plain": [
-       "<drawSvg.drawing.Drawing at 0x1d0962e77c0>"
+       "<drawSvg.drawing.Drawing at 0x250949b8700>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,18 +31,23 @@
    "source": [
     "import random\n",
     "import drawSvg as draw\n",
+    "from hyperbolic.poincare.shapes import *\n",
     "import sys\n",
     "sys.path.insert(0,\"..\")\n",
-    "from constructions import *\n",
+    "from constructions import randomPoints\n",
     "from deltaNeigbourhood import *\n",
-    "from hyperbolic.poincare.shapes import *\n",
     "from Triangle import *\n",
+    "\n",
+    "backgroundStyle = dict(fill='#ff7f00', stroke_width=0.01, stroke='#001a30')\n",
+    "polyStyle1 = dict(stroke='black', stroke_width=0.005,  fill='#53565b', fill_opacity=1)\n",
+    "polyStyle2 = dict(stroke='black', stroke_width=0.005, fill='#ff9e1b', fill_opacity=0.5)\n",
+    "\n",
     "\n",
     "d = draw.Drawing(2.1, 2.1, origin='center')\n",
     "d.setRenderSize(750)\n",
-    "d.append(draw.Circle(0, 0, 1, fill='#ff7f00', stroke_width=0.01, stroke='#001a30'))\n",
+    "d.append(draw.Circle(0, 0, 1, **backgroundStyle))\n",
     "\n",
-    "PList=randomPoints(3)\n",
+    "PList=randomPoints(3,3)\n",
     "k=random.randint(0,2)\n",
     "#PList=[Ideal.fromDegree(i/3*360) for i in range(2)]\n",
     "\n",
@@ -70,8 +61,8 @@
     "\n",
     "delta = Tri.approx()\n",
     "delta=0.3\n",
-    "d.draw(Tri, stroke='black', stroke_width=0.005,  fill='#53565b', fill_opacity=1)\n",
-    "d.draw(deltaNbh(Tri,delta,k), stroke='black', stroke_width=0.005, fill='#ff9e1b', fill_opacity=0.5)\n",
+    "d.draw(Tri, **polyStyle1)\n",
+    "d.draw(deltaNbh(Tri,delta,k), **polyStyle2)\n",
     "\n",
     "if Tri.isCCW():\n",
     "    print('Tri is CCW')\n",
