--- a/examples/widget.ipynb
+++ b/examples/widget.ipynb
@@ -40,6 +40,8 @@
    "source": [
     "import drawSvg as draw\n",
     "from drawSvg.widgets import DrawingWidget\n",
+    "import sys\n",
+    "sys.path.insert(0,\"..\")\n",
     "from hyperbolic.poincare.shapes import *\n",
     "from constructions import *\n",
     "from Triangle import *\n",
